Added googlr verifcation

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     />
   
     <title>Software Hub</title>
+    <meta name="google-site-verification" content="hZ81quA_f8hOzKFPGZPL15FqOh9meSwf97fkfOaYn5k" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
